fix: fix explorer view gradient positioning on mobile (fixes #906) (#1206)

--- a/quartz/styles/base.scss
+++ b/quartz/styles/base.scss
@@ -485,6 +485,7 @@ ul.overflow,
 ol.overflow {
   max-height: 400;
   overflow-y: auto;
+  position: relative;
 
   // clearfix
   content: "";
